<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="10dp" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="horizontal" >
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:text="@string/clock_widget"
            android:textSize="62sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingLeft="15dp"
            android:paddingTop="12dp"
            android:text="@string/date_widget"
            android:textSize="25sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableBottom="@drawable/sun"
        android:drawablePadding="20dp"
        android:gravity="center"
        android:paddingLeft="10dp"
        android:paddingTop="15dp"
        android:text="@string/locate_widget"
        android:textSize="23sp" >

    </TextView>

 
    </LinearLayout>
 
<View
   	android:layout_width="match_parent"
   	android:layout_height="15dp"
   	android:background="@color/white" />    
    
</LinearLayout>